# ros2_service_issue

service_msg/: CMakeLists.txt  package.xml
service_msg/srv/: MyService.srv
srv_client/: CMakeLists.txt  deadlock_config.launch.py  package.xml  working_config.launch.py
srv_client/include/srv_client/: srv_client.hpp
srv_client/src/: srv_client.cpp
srv_service/: CMakeLists.txt  package.xml
srv_service/include/srv_service/: srv_service.hpp
srv_service/src/: srv_service.cpp
